Expanded CSS. Bug: Alert Container is clipping over Navbar - uncertain of cause

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,18 @@ body {
     font-family: "Raleway", sans-serif;
 }
 
-.alert-container {}
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0; 
+}
+
+.site-wide-alert {
+    border-radius: 0;
+    margin-bottom: 0;
+    padding: 5px 15px;
+    border: 1px solid transparent;
+    border-radius: 0;
+} 
 
 .callout-container {
     height: 100vh;
@@ -16,6 +27,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    position: relative;
 }
 
 .quotes-container {}
@@ -24,6 +37,36 @@ body {
 
 .favorites-container {}
 
+
+/* Navabr */
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.25);
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-dark .navbar-brand {
+    font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
+}
 
 /* Jumbotron */
 
@@ -68,7 +111,7 @@ body {
 .btn--cta {
     font-weight: bold;
     border-radius: 23px;
-    width: 160px;
+    
 }
 
 .btn--red {
